# Bitcoin-Explorer

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
bitcoin-explorer-backend/: .env  Cargo.toml  Dockerfile
bitcoin-explorer-backend/src/: main.rs
bitcoin-explorer-frontend/: Dockerfile  package-lock.json  package.json
bitcoin-explorer-frontend/public/: index.html
bitcoin-explorer-frontend/src/: App.css  App.tsx
bitcoin_ingestion/: .env  Cargo.toml  Dockerfile
bitcoin_ingestion/src/: main.rs
node-backend/: .env  Dockerfile  index.js  package-lock.json  package.json
