[package]
name = "bitcoin_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"