[package]
name = "bitcoin_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
url = "2.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15"
odbc-api = "9.0.0"
